--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* 
     This is a CSS comment. Please add your name to this file below:
     
-    NAME: 
+    NAME: August Alvarado
 */
 /* -------------------------------------------------- */
 /* 
@@ -325,13 +325,13 @@ footer{
 /* For both links in the section */
 /* 
     TO DO: add styles to both links in this section that will:
-        - make these links display as block-level elements
-        - remove the underline
-        - align the text to the center
-        - make the font display at 1.1rem
-        - make the text bold
-        - tell these to be 50% wide in the container
-        - add the large box shadow
+        - DONE make these links display as block-level elements
+        - DONe remove the underline
+        - DONE align the text to the center
+        - DONE make the font display at 1.1rem
+        - DONE make the text bold
+        - DONE tell these to be 50% wide in the container
+        - DONE add the large box shadow
 */
 /* ADD SELECTOR AND STYLES HERE */
 
@@ -343,6 +343,13 @@ footer{
     border: 4px solid var(--dk-blue);
     margin: 1rem auto;
     border-radius: 0 24px 24px 0;
+    text-align: center;
+    font-weight: bold;
+    display: block;
+    text-decoration: none;
+    font-display: 1.1rem;
+    width: 50%;
+    box-shadow: -3px 3px 7px var(--med-gray);
 }
 
 /* For the paragraph with placeholder text */
@@ -358,11 +365,18 @@ footer{
     border: 6px solid var(--lt-blue);
     margin: 1rem auto 2rem auto;
     border-radius: 8px;
+    display: block;
+    text-align: center;
+    font-weight: bold;
+    text-decoration: none;
+    font-display: 1.1rem;
+    width: 50%;
+    box-shadow: -3px 3px 7px var(--med-gray);
 }
 
 /* For the last paragraph in the section */
 /* 
-    TO DO: add styles to the last paragraph in this section that will:
+    DONE TO DO: add styles to the last paragraph in this section that will:
         - make the background the teal-rgba color
         - add a 4 pixel dark gray border that is dashed
         - add margin:
@@ -377,7 +391,11 @@ footer{
             - left: 60px
 */
 #section2 div > p:last-of-type{
-    
+    background-color: var(--teal-rgba);
+    border: 4px dashed var(--dk-gray);
+    margin: 16px 60px 32px 8px;
+    padding: 32px 8px 16px 60px;
+   
 }
 
  /* For the div wrapped around that paragraph to show the space its taking up within its container */
@@ -387,13 +405,18 @@ footer{
 
 /* To change the styles on each of those links when you're hovering over them with a mouse */
 /* 
-    TO DO: add styles to the first link on hover in this section that will:
+    DONE    TO DO: add styles to the first link on hover in this section that will:
         - make the background the dk-blue color
         - make the text white
         - change the color of the border to the lt-blue color
         - add the small box shadow, using the variable in the root
 */
 #section2 a:first-of-type:hover{
+    background-color: var(--dk-blue);
+    color: var(--white);
+    border-color: var(--lt-blue);
+    box-shadow: var(--box-shadow-sm);
+
 
 }
 
@@ -410,7 +433,7 @@ footer{
 
 /* For the corgi graphic */
 /* 
-    TO DO: add styles to the image in this section that will:
+    DONE    TO DO: add styles to the image in this section that will:
         - turn this into a block-level element
         - make this display at 200px wide
         - set the height to auto
@@ -418,6 +441,11 @@ footer{
         - add the small filter drop shadow from the CSS variables in the root
 */
 #section3 img{
+    display: block;
+    width: 200px;
+    height: auto;
+    margin: 0 auto;
+    filter: var(--filter-shadow-sm);
     
 }
 
@@ -447,7 +475,7 @@ footer{
 }
 
 /* 
-    TO DO: add styles to the after pseudo-element on the div in this section that will:
+    DONE TO DO: add styles to the after pseudo-element on the div in this section that will:
         - add content (empty string)
         - make this display as a block-level element
         - make this 50px wide
@@ -460,6 +488,16 @@ footer{
         - move this to the right from its original location by 25px
 */
 #section3 div::after{
+    content: "";
+    display: block;
+    width: 50px;
+    height: 50px;
+    background-color: var(--lt-blue);
+    border-radius: 50%;
+    position: relative;
+    z-index: 2;
+    top: -50px;
+    left: 25px;
 }
 
 
@@ -473,7 +511,7 @@ footer{
 
 /* For the second paragraph */
 /* 
-    TO DO: add styles to the last paragraph in this section that will:
+    DONE TO DO: add styles to the last paragraph in this section that will:
         - add margin:
             - top: 1rem
             - right: 0
@@ -481,6 +519,10 @@ footer{
             - left: 0
 */
 #section4 p:last-of-type{
+    margin-top: 1rem;
+    margin-right: 0;
+    margin-bottom: 1rem;
+    margin-left: 0;
 
 }
 
@@ -512,12 +554,17 @@ footer{
 
 /* For the third div, let's include the a background color, allow the image to tile, but center the tiling in the container */
 /* 
-    TO DO: add styles to the div with an ID of bg-img-3 in this section that will:
+    DONE TO DO: add styles to the div with an ID of bg-img-3 in this section that will:
         - add the lt-blue color to the background
         - center the image pattern in the container
         - add the puppy-photo as a repeating background to the container
 */
 #bg-img-3{
+    background-color: var(--lt-blue);
+    background-image: url("images/puppy-photo.jpg");
+    background-position: center;
+    background-repeat: repeat;
+
     
 }
 
@@ -539,12 +586,15 @@ footer{
 
 /* For the first div, let's add the pattern from the images folder called wood, it is from Transparent Textures. Include the lt-gray background color as well */
 /* 
-    TO DO: add styles to the div with an ID of pattern1 in this section that will:
+    DONE TO DO: add styles to the div with an ID of pattern1 in this section that will:
         - set the background color to light-gray
         - scale the background image to 110% 
         - add the wood background texture from the images folder
 */
 #pattern1{
+    background-color: var(--lt-gray);
+    background-size: 110%;
+    background-image: url(images/wood.png);
     
 }
 
@@ -584,7 +634,7 @@ footer{
 
 /* Let's tell our images to float to the left. Remember, they'll sort of pile up next to each other in the container, but only if they're narrow enough to fit! */
 /* 
-    TO DO: add styles to the image with the ID of corgi in this section that will:
+    DONE TO DO: add styles to the image with the ID of corgi in this section that will:
         - float this image to the left
         - add 1 rem of margin to the right of the image
 */
@@ -598,19 +648,21 @@ footer{
 }
 
 /* 
-    TO DO: add styles to the image with an ID of dog-house in this section that will:
+    DONE TO DO: add styles to the image with an ID of dog-house in this section that will:
         - float the image to the right
 */
 #dog-house{
+    float: right;
     
 }
 
 /* When you use floats, you have to be sure to clear them so that the rest of your page after the floats displays normally. Let's use the display section to clear the floats (because it is the next tag outside of our container in the HTML) */
 /* 
-    TO DO: add styles to the display section that will:
+    DONE TO DO: add styles to the display section that will:
         - clear any floats
 */
 #section9{
+    clear: both;
     
 }
 
